--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div
               class="hero-devices__image-wrapper hero-devices__image-container-8"
               style="--device-order: 7">
-
+<!--
           <img
               id="animation-image-7"
               src="/static/2020/img/home/rubik-cube-dark.png"
@@ -912,6 +912,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               class="hero-devices__image hero-devices__image-1 cloud-image--portrait"
               loading="lazy">
           </img>
+-->
+
+        <img
+            id="animation-image-7"
+            src="/static/2020/img/home/Memoji.png"
+            alt="iphone dark"
+            class="hero-devices__image hero-devices__image-0 cloud-image--portrait"
+            loading="lazy"
+            style="border-radius:50%">
+        </img>
+        <img
+            id="animation-image-7"
+            src="/static/2020/img/home/Memoji.png"
+            alt="iphone dark"
+            class="hero-devices__image hero-devices__image-1 cloud-image--portrait"
+            loading="lazy"
+            style="border-radius:50%">
+        </img>
+
 
 
           </div>
