--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -370,6 +370,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </span>Business card</a>
     </li>
 
+    <a href="http://www.mauriziominieri.it/certificati/" target="_blank" role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="degrees">
+        <span class="c-nav__icon u-upto-desktop-is-hidden">    <img loading="lazy" alt="Degrees" class="icon" src="http://www.mauriziominieri.it/static/2020/certificati/degrees.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/degrees.png 2x" height="200" width="350">
+</span>Degrees</a>
+  </li>
+
 
                 </ul>
               </li>
