memoji dimension added

--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             alt="iphone dark"
             class="hero-devices__image hero-devices__image-0 cloud-image--portrait"
             loading="lazy"
-            style="border-radius:50%">
+            style="border-radius:50%;">
         </img>
         <img
             id="animation-image-7"
@@ -928,7 +928,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             alt="iphone dark"
             class="hero-devices__image hero-devices__image-1 cloud-image--portrait"
             loading="lazy"
-            style="border-radius:50%">
+            style="border-radius:50%;">
         </img>
 
 
