alt images fixed

--- a/index.html
+++ b/index.html
@@ -793,14 +793,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <img
     id="animation-image-2"
     src="/static/2020/img/home/robot-arm-light.png"
-    alt="iphone dark"
+    alt="robot dark"
     class="hero-devices__image hero-devices__image-0 cloud-image--portrait"
     loading="lazy">
 </img>
 <img
     id="animation-image-2"
     src="/static/2020/img/home/robot-arm.png"
-    alt="iphone dark"
+    alt="robot light"
     class="hero-devices__image hero-devices__image-1 cloud-image--portrait"
     loading="lazy">
 </img>
@@ -817,14 +817,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <img
     id="animation-image-3A"
     src="/static/2020/img/home/joypad-ps-white.png"
-    alt="iphone dark"
+    alt="joypad dark"
     class="hero-devices__image hero-devices__image-0 cloud-image--portrait"
     loading="lazy">
 </img>
 <img
     id="animation-image-3"
     src="http://www.mauriziominieri.it/static/2020/img/home/joypad-ps-black2.png"
-    alt="iphone dark"
+    alt="joypad light"
     class="hero-devices__image hero-devices__image-1 cloud-image--portrait"
     loading="lazy">
 </img>
@@ -865,14 +865,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                <img
                    id="animation-image-5"
                    src="http://www.mauriziominieri.it/static/2020/img/home/guitar-green.png"
-                   alt="iphone dark"
+                   alt="guitar dark"
                    class="hero-devices__image hero-devices__image-0 cloud-image--portrait"
                    loading="lazy">
                </img>
                <img
                    id="animation-image-5"
                    src="http://www.mauriziominieri.it/static/2020/img/home/guitar-blue.png"
-                   alt="iphone dark"
+                   alt="guitar light"
                    class="hero-devices__image hero-devices__image-1 cloud-image--portrait"
                    loading="lazy">
                </img>
@@ -917,7 +917,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <img
             id="animation-image-7"
             src="/static/2020/img/home/Memoji.png"
-            alt="iphone dark"
+            alt="memoji dark"
             class="hero-devices__image hero-devices__image-0 cloud-image--portrait"
             loading="lazy"
             style="border-radius:50%;">
@@ -925,7 +925,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <img
             id="animation-image-7"
             src="/static/2020/img/home/Memoji.png"
-            alt="iphone dark"
+            alt="memoji light"
             class="hero-devices__image hero-devices__image-1 cloud-image--portrait"
             loading="lazy"
             style="border-radius:50%;">
