beyond the common vision

--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 Nella sezione <a class="cta" href="http://www.mauriziominieri.it/didattica/">DIDATTICA</a> puoi consultare slides, verifiche e guide create da me e vedere
                 le foto con i miei studenti.
                 <br>
-                <p class="cta-grid__copy-item is-copy">"Computers are incredibly fast, accurate and stupid; humans are incredibly slow, inaccurate and brilliant; together they are powerful beyond imagination." <br> Albert Einstein.</p>
+                <p class="cta-grid__copy-item is-copy">"Beyond the common vision"</p>
 
 
 
