--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 Nella sezione <a class="cta" href="http://www.mauriziominieri.it/didattica/">DIDATTICA</a> puoi consultare slides, verifiche e guide create da me e vedere
                 le foto con i miei studenti.
                 <br>
-                <p class="cta-grid__copy-item is-copy centered">"Beyond the common vision"</p>
+                <p class="cta-grid__copy-item is-copy centered">Beyond the common vision</p>
 
 
 
