--- a/index.html
+++ b/index.html
@@ -1185,8 +1185,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <p class="cta-grid__copy-item text-normal cascade-text__item">
                 Nella sezione <a class="cta" href="http://www.mauriziominieri.it/didattica/">DIDATTICA</a> puoi consultare slides, verifiche e guide create da me e vedere
                 le foto con i miei studenti.
-                <br>
-                <p class="cta-grid__copy-item is-copy centered">Beyond the common vision</p>
+                <br><br>
+                <p class="cta-grid__copy-item is-copy" style="margin-left: auto;
+    margin-right: auto;">Beyond the common vision</p>
 
 
 
