--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -999,8 +999,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <p class="cta-grid__copy-item text-normal cascade-text__item">
                 In the section <a class="cta" href="http://www.mauriziominieri.it/didattica/">TEACHING</a> you can consult slides, checks and guides created by me and see
                 the pictures with my students.
-                <br>
-                <p class="cta-grid__copy-item is-copy centered">"Beyond the common vision"</p>
+                <br><br>
+                <p class="cta-grid__copy-item is-copy">"Beyond the common vision"</p>
 
 
               </p>
