motto position fixed

--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -1000,7 +1000,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 In the section <a class="cta" href="http://www.mauriziominieri.it/didattica/">TEACHING</a> you can consult slides, checks and guides created by me and see
                 the pictures with my students.
                 <br><br>
-                <p class="cta-grid__copy-item is-copy">"Beyond the common vision"</p>
+                <p class="cta-grid__copy-item is-copy" style="text-align: center">"Beyond the common vision"</p>
 
 
               </p>
