--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -2562,7 +2562,7 @@ data-ca-label="tv">
           <!--Primo progetto-->
                 <div class="apps-carousel__item apps-carousel__item--phones">
                   <div class="apps-carousel__item-inner">
-                    <a class="apps-carousel__item-img-wrap" href="http://www.mauriziominieri.it/static/2020/projects/LMGS - THE FLYING PIG.zip" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="The flying pig">
+                    <a class="apps-carousel__item-img-wrap" href="http://www.mauriziominieri.it/static/2020/projects/TheFlyingPig.zip" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="The flying pig">
                       <img alt="" class="apps-carousel__item-img" src="http://www.mauriziominieri.it/static/2020/gif/theflyingpig.gif" srcset="http://www.mauriziominieri.it/static/2020/gif/theflyingpig.gif 2x" />
                     </a>
                     <div class="apps-carousel__item-description">
