framework fixed to frameworks

--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -1578,9 +1578,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <section class="cta-grid grid2">
 
-    <h2 class="cta-grid__heading is-2">Framework</h2>
+    <h2 class="cta-grid__heading is-2">Frameworks</h2>
     <div class="cta-grid__copy">
-    <p class="cta-grid__copy-item is-copy-m">All the Framework I have used during my academic and working career.</p>
+    <p class="cta-grid__copy-item is-copy-m">All the Frameworks I have used during my academic and working career.</p>
     </div>
 
     <div class="cta-grid__cards-wrapper" >
