--- a/index.html
+++ b/index.html
@@ -1776,9 +1776,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <section class="cta-grid grid2">
 
-    <h2 class="cta-grid__heading is-2">Framework</h2>
+    <h2 class="cta-grid__heading is-2">Frameworks</h2>
     <div class="cta-grid__copy">
-    <p class="cta-grid__copy-item is-copy-m">Tutti i framework che ho utilizzato durante il mio percorso accademico e lavorativo.</p>
+    <p class="cta-grid__copy-item is-copy-m">Tutti i frameworks che ho utilizzato durante il mio percorso accademico e lavorativo.</p>
     </div>
 
     <div class="cta-grid__cards-wrapper" >
