--- a/index.html
+++ b/index.html
@@ -4220,10 +4220,10 @@ data-ca-label="tv">
     <a href="https://play.google.com/store/apps" class="btn btn--text" target="_blank" data-g-event="apps-carousel" data-g-action="browse-apps-cta" data-g-label="https://play.google.com/store/apps">Guardali tutti</a>
 -->
 
-    <a href=""
+    <a href="http://www.mauriziominieri.it/promo/"
     class="cta cta--is-2"
     aria-label="Scoprili tutti" target="_blank"
-    >Scopri i dettagli
+    >Guarda le immagini promozionali
     <svg class="icon--svg cta__icon cta__external" aria-hidden="true">
     <use xlink:href="#ico-arrow-large"></use>
     </svg></a>
