--- a/promo/index.html
+++ b/promo/index.html
@@ -537,6 +537,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/promo/RB-Promo.png" alt="Running Blind" style=" width:100%;" >
               </a>
+              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/img/promo/FindOne-promo.png" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="FindOne" >
+                <div class="c-blocks__item-inner">
+                  <div class="c-blocks__item-body">
+                    <span class="c-blocks__item-title">FindOne</span>
+                  </div>
+                </div>
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/promo/FindOne-promo.png" alt="FindOne" style=" width:100%;" >
+              </a>
           </div>
         </div>
       </div>
