--- a/promo/index.html
+++ b/promo/index.html
@@ -561,13 +561,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/promo/FlappyVirus-promo.png" alt="Flappy Virus" style=" width:100%;" >
               </a>
-              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/img/promo/NOP-promo.png" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Not Only Pasta" >
+              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/img/promo/NOP-promo.png" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Not Only Pizza" >
                 <div class="c-blocks__item-inner">
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">Not Only Pasta</span>
+                    <span class="c-blocks__item-title">Not Only Pizza</span>
                   </div>
                 </div>
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/promo/NOP-promo.png" alt="Not Only Pasta" style=" width:100%;" >
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/promo/NOP-promo.png" alt="Not Only Pizza" style=" width:100%;" >
               </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/img/promo/GeoAll-promo.png" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="GeoAll" >
                 <div class="c-blocks__item-inner">
