promo images text fixed

--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -3298,7 +3298,7 @@ data-ca-label="tv">
     <a href="http://www.mauriziominieri.it/promo/"
     class="cta cta--is-2"
     aria-label="Scoprili tutti" target="_blank"
-    >View promotional images
+    >Promotional images
     <svg class="icon--svg cta__icon cta__external" aria-hidden="true">
     <use xlink:href="#ico-arrow-large"></use>
     </svg></a>
