--- a/index.html
+++ b/index.html
@@ -4223,7 +4223,7 @@ data-ca-label="tv">
     <a href="http://www.mauriziominieri.it/promo/"
     class="cta cta--is-2"
     aria-label="Scoprili tutti" target="_blank"
-    >Guarda le immagini promozionali
+    >Immagini promozionali
     <svg class="icon--svg cta__icon cta__external" aria-hidden="true">
     <use xlink:href="#ico-arrow-large"></use>
     </svg></a>
