medium findone article link fixed

--- a/index.html
+++ b/index.html
@@ -5919,7 +5919,7 @@ aria-label="auto"data-ca-label="auto">
               <p class="text-normal" style="height:350px;">
                 L'articolo pubblicato su Medium riguardante l'applicazione FindOne.
               </p>
-              <a href="http://www.mauriziominieri.it/static/2020/articoli/FindOne-Medium.pdf" target="_blank" class="btn btn-primary btn-md btn-rounded">Leggi</a>
+              <a href="https://medium.com/@mauminieri/findone-f7117d58a3bd" target="_blank" class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
