--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -3380,7 +3380,7 @@ data-ca-label="tv">
               <p class="text-normal" style="height:350px;">
                 The article published in Medium about the FindOne application.
               </p>
-              <a href="http://www.mauriziominieri.it/static/2020/articoli/FindOne-Medium.pdf" target="_blank" class="btn btn-primary btn-md btn-rounded">Read</a>
+              <a href="https://medium.com/@mauminieri/findone-f7117d58a3bd" target="_blank" class="btn btn-primary btn-md btn-rounded">Read</a>
             </div>
           </div>
         </div>
