postgresql skill added

--- a/index.html
+++ b/index.html
@@ -1878,6 +1878,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </li>
         <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
+          href="https://it.wikipedia.org/wiki/PostgreSQL" target="_blank">
+          <div class="cards-grid__item-heading is-7">PostgreSQL</div>
+        <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-postgresql.png"/>
+        </a>
+        </li>
+        <li class="cards-grid__item">
+        <a class="cards-grid__item-wrapper"
           href="https://en.wikipedia.org/wiki/HeidiSQL" target="_blank">
           <div class="cards-grid__item-heading is-7">Heidi SQL</div>
             <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-heidisql.png"/>
