--- a/index.html
+++ b/index.html
@@ -1671,6 +1671,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </a>
     </li>
     <li class="cards-grid__item">
+    <a class="cards-grid__item-wrapper"
+      href="https://it.wikipedia.org/wiki/Eclipse_(informatica)" target="_blank">
+      <div class="cards-grid__item-heading is-7">Eclipse</div>
+      <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-eclipse.png"/>
+    </a>
+    </li>
+    <li class="cards-grid__item">
       <a class="cards-grid__item-wrapper"
         href="https://it.wikipedia.org/wiki/Microsoft_Visual_Studio" target="_blank">
         <div class="cards-grid__item-heading is-7">Visual Studio</div>
