search command fixed

--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -333,7 +333,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         </a>
       </div>
-<form action="http://www.maurizio.it/" class="c-search" data-c-search id="search" method="get">
+<form action="http://www.mauriziominieri.it/" class="c-search" data-c-search id="search" method="get">
   <label for="q">Search</label>
   <input autocomplete="off" id="q" name="q" placeholder="Search" type="text" value="">
   <button aria-label="Search" class="btn btn--search" type="submit"><!--
