--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         </a>
       </div>
-<form action="http://www.maurizio.it/index.html" class="c-search" data-c-search id="search" method="get">
+<form action="http://www.mauriziominieri.it/index.html" class="c-search" data-c-search id="search" method="get">
   <label for="q">Cerca</label>
   <input autocomplete="off" id="q" name="q" placeholder="Cerca" type="text" value="">
   <button aria-label="Cerca" class="btn btn--search" type="submit"><!--
