--- a/didattica/index.html
+++ b/didattica/index.html
@@ -596,7 +596,7 @@
             <form
         class="search-default js-search"
         data-android-component="search-default"
-        data-action="http://www.mauriziominieri.it/results/"
+        data-action="http://www.mauriziominieri.it/didattica/"
         id="search-default"
         method="get"
         style="--item-order: 5">
