--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -939,7 +939,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <p class="cta-grid__copy-item text-normal cascade-text__item">
 
                 Hi, I introduce myself, I am Maurizio Minieri.<br><br>
-                I have always been intrigued by the mechanism that resides in things since I was a child, I was the kid who disassembled his expensive to see how they worked
+                I have always been intrigued by the mechanism that resides in things since I was a child, I was the kid who disassembled his expensive toys to see how they worked
                 rather than using them, and the passion for video games has grown over the years and after having attended an experimental scientific high school I enrolled at the
                 University of Naples Federico II, immersing myself in this vast and fantastic world: <b class="">Computer science</b>.
                 I am intrigued and fascinated by how it can be present in every object of life, I imagine a future with
