arkit, scenekit and spritekit added

--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -1613,6 +1613,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </li>
     <li class="cards-grid__item">
       <a class="cards-grid__item-wrapper"
+        href="https://it.wikipedia.org/wiki/CodeIgniter" target="_blank">
+        <div class="cards-grid__item-heading is-7">Code Igniter</div>
+        <svg class="icon--svg cards-grid__item-icon" aria-hidden="true">
+          <use xlink:href="#ico-code-igniter"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="cards-grid__item">
+      <a class="cards-grid__item-wrapper"
         href="https://en.wikipedia.org/wiki/Foundation_(framework)" target="_blank">
         <div class="cards-grid__item-heading is-7">Foundation</div>
         <svg class="icon--svg cards-grid__item-icon" aria-hidden="true">
@@ -1624,23 +1633,35 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a class="cards-grid__item-wrapper"
           href="https://getuikit.com/" target="_blank">
           <div class="cards-grid__item-heading is-7">UIKit</div>
-          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-uikit.png"/>
+          <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-uikit.png"/>
         </a>
       </li>
       <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
-          href="https://developer.apple.com/documentation/swiftui" target="_blank">
+          href="https://developer.apple.com/swiftui" target="_blank">
           <div class="cards-grid__item-heading is-7">SwiftUI</div>
-        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-swiftui.png"/>
+        <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-swiftui.png"/>
         </a>
       </li>
       <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
-          href="https://it.wikipedia.org/wiki/CodeIgniter" target="_blank">
-          <div class="cards-grid__item-heading is-7">Code Igniter</div>
-          <svg class="icon--svg cards-grid__item-icon" aria-hidden="true">
-            <use xlink:href="#ico-code-igniter"></use>
-          </svg>
+          href="https://developer.apple.com/spritekit/" target="_blank">
+          <div class="cards-grid__item-heading is-7">SpriteKit</div>
+        <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-spritekit.png"/>
+        </a>
+      </li>
+      <li class="cards-grid__item">
+        <a class="cards-grid__item-wrapper"
+          href="https://developer.apple.com/scenekit/" target="_blank">
+          <div class="cards-grid__item-heading is-7">SceneKit</div>
+        <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-scenekit.png"/>
+        </a>
+      </li>
+      <li class="cards-grid__item">
+        <a class="cards-grid__item-wrapper"
+          href="https://developer.apple.com/augmented-reality/" target="_blank">
+          <div class="cards-grid__item-heading is-7">ARKit</div>
+        <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-arkit.png"/>
         </a>
       </li>
     </ul>
