didattica index particles fixed

--- a/didattica/index.html
+++ b/didattica/index.html
@@ -411,121 +411,6 @@
     <body>
 
 
-
-
-
-
-
-    <!--INIZIO NAVBAR VECCHIA-->
-
-  <!--  <div id="top-of-page"></div>
-    <div id="mk-boxed-layout">
-    <div id="mk-theme-container" class="trans-header">
-    <header data-height='80' data-sticky-height='50' data-responsive-height='90'
-    data-transparent-skin='light' data-header-style='1' data-sticky-style='fixed' data-sticky-offset='header'
-    id="mk-header-1" class="mk-header header-style-1 header-align-left  toolbar-false menu-hover-1 sticky-style-fixed
-    full-header  transparent-header light-skin bg-true" role="banner" itemscope="itemscope" >
-
-   <div class="mk-header-holder">
-   <div class="mk-header-inner add-header-height">
-    <div class="mk-header-bg "></div>
-    <div class="mk-header-nav-container one-row-style menu-hover-style-1" role="navigation" itemscope="itemscope" itemtype="https://schema.org/SiteNavigationElement">
-    <nav class="mk-main-navigation js-main-nav" id="principal-navbar"><ul id="menu-main" class="main-navigation-ul dropdownJavascript">
-    <li id="menu-item-presentation" class="menu-item menu-item-type-post_type menu-item-object-page no-mega-menu"><a class="menu-item-link js-smooth-scroll" href="index.html" data-wpel-link="internal" style=" text-decoration: none;  color:white;   font-size: 25px; font-family: 'Caveat Brush'" >SitoWeb Personale</a></li>
-    <li id="navprog-item-1" class="menu-item"><a class="menu-item-link js-smooth-scroll" href="#slides" data-wpel-link="internal">Dispense</a></li>
-    <li id="navprog-item-2" class="menu-item menu-item-type-post_type menu-item-object-page has-mega-menu"><a class="menu-item-link js-smooth-scroll" href="#test" data-wpel-link="internal">Verifiche</a></li>
-    <li id="navprog-item-3" class="menu-item menu-item-type-post_type menu-item-object-page has-mega-menu"><a class="menu-item-link js-smooth-scroll" href="#download" data-wpel-link="internal">Programmi Utili</a></li>
-    <li id="navprog-item-4" class="menu-item menu-item-type-post_type menu-item-object-page has-mega-menu"><a class="menu-item-link js-smooth-scroll" href="#finalProjects" data-wpel-link="internal">Progetti Finali</a></li>
-    <li id="navrob-item-1" class="menu-item menu-item-type-post_type menu-item-object-page has-mega-menu"><a class="menu-item-link js-smooth-scroll" href="#Robotica" data-wpel-link="internal">Robot</a></li>
-    <li id="navedit-item-1" class="menu-item menu-item-type-post_type menu-item-object-page has-mega-menu"><a class="menu-item-link js-smooth-scroll" href="#slidesEditing" data-wpel-link="internal">Dispense</a></li>
-    <li id="navedit-item-2" class="menu-item menu-item-type-post_type menu-item-object-page has-mega-menu"><a class="menu-item-link js-smooth-scroll" href="#testEditing" data-wpel-link="internal">Verifiche</a></li>
-    <li id="navprog-item-5" class="menu-item menu-item-type-post_type menu-item-object-page has-mega-menu"><a class="menu-item-link js-smooth-scroll" href="#references" data-wpel-link="internal">Riferimenti</a></li>
-    </ul></nav>
-
-    </div>
-    <div class="mk-nav-responsive-link">
-    <div class="mk-css-icon-menu">
-    <div class="mk-css-icon-menu-line-1"></div>
-    <div class="mk-css-icon-menu-line-2"></div>
-    <div class="mk-css-icon-menu-line-3"></div>
-    </div>
-    </div>
-
-    <div class=" header-logo fit-logo-img add-header-height logo-is-responsive logo-has-sticky">
-    <a target="_blank" href="/static/2020/img/icons/LogoFox1.png" title="MaurizioMinieri" data-wpel-link="internal">
-    <img style="height:70%;" class="mk-desktop-logo dark-logo " title="cy" alt="" src="http://mauriziominieri.it/static/2020/img/icons/LogoFox1.png" />
-    <img style="height:70%;" class="mk-desktop-logo light-logo " title="" alt="" src="http://mauriziominieri.it/static/2020/img/icons/LogoFox1.png" />
-    <img style="height:70%;" class="mk-resposnive-logo " title="" alt="" src="http://mauriziominieri.it/static/2020/img/icons/LogoFox1.png" />
-    <img style="height:60%;" class="mk-sticky-logo " title="" alt="" src="http://mauriziominieri.it/static/2020/img/icons/LogoFox1.png" />
-
-
-    </a>
-
-
-
-    <div id="google_translate_element" style="display:none"></div>
-    <a style="margin-left:85px;" target="_blank" href="javascript:changeLanguageByButtonClick()">
-    <img style="height:50%; " class="mk-desktop-logo dark-logo" src="http://mauriziominieri.it/static/2020/img/icons/icon-americaFlag.png" />
-    <img style="height:50%; " class="mk-desktop-logo light-logo" src="http://mauriziominieri.it/static/2020/img/icons/icon-americaFlag.png" />
-    <img style="height:50%; margin-left:10px;" class="mk-resposnive-logo " src="http://mauriziominieri.it/static/2020/img/icons/icon-americaFlag.png" />
-    <img style="height:50%; margin-left:-30px;" class="mk-sticky-logo " title="" alt="" src="http://mauriziominieri.it/static/2020/img/icons/icon-americaFlag.png" />
-    </a>
-
-
-    <li id="menu-item-p" ><a  href="index.html" style="right: -30%;    text-decoration: none;  color:white;   font-size: 25px; font-family: 'Caveat Brush'" >SITOWEB PERSONALE</a></li>
-    </div>
-
-
-
-
-
-
-
-    <div class="mk-header-right">
-    </div>
-    </div>
-
-
-
-    <div class="mk-responsive-wrap">
-    <nav class="menu-main-container">
-    <ul id="menu-main-1" class="mk-responsive-nav">
-    <li id="navprogc-item-1" class="menu-item menu-item-type-post_type menu-item-object-page has-mega-menu"><a class="menu-item-link js-smooth-scroll" href="#slides" data-wpel-link="internal">Dispense</a></li>
-    <li id="navprogc-item-2" class="menu-item menu-item-type-post_type menu-item-object-page has-mega-menu"><a class="menu-item-link js-smooth-scroll" href="#test" data-wpel-link="internal">Verifiche</a></li>
-    <li id="navprogc-item-3" class="menu-item menu-item-type-post_type menu-item-object-page has-mega-menu"><a class="menu-item-link js-smooth-scroll" href="#download" data-wpel-link="internal">Programmi Utili</a></li>
-    <li id="navprogc-item-4" class="menu-item menu-item-type-post_type menu-item-object-page has-mega-menu"><a class="menu-item-link js-smooth-scroll" href="#finalProjects" data-wpel-link="internal">Progetti Finali</a></li>
-    <li id="navrobc-item-1" class="menu-item menu-item-type-post_type menu-item-object-page has-mega-menu"><a class="menu-item-link js-smooth-scroll" href="#Robotica" data-wpel-link="internal">Robot</a></li>
-    <li id="naveditc-item-1" class="menu-item menu-item-type-post_type menu-item-object-page has-mega-menu"><a class="menu-item-link js-smooth-scroll" href="#slidesEditing" data-wpel-link="internal">Dispense</a></li>
-    <li id="naveditc-item-2" class="menu-item menu-item-type-post_type menu-item-object-page has-mega-menu"><a class="menu-item-link js-smooth-scroll" href="#testEditing" data-wpel-link="internal">Verifiche</a></li>
-    <li id="navprogc-item-5" class="menu-item menu-item-type-post_type menu-item-object-page"><a class="menu-item-link js-smooth-scroll" href="#references" data-wpel-link="internal">Riferimenti</a></li>
-    </ul></nav>
-
-  </div>
-    </div>
--->
-
-
-<!--
-    <div id="particles-js">
-        <p id="myname" >Maurizio Minieri</p>
-        <p id="student" class="cssanimation danceMiddle">Dottore in Informatica</p><br>
-        <p  id="university" class="cssanimation rollFromBottom">Università Federico II di Napoli</p>
-    </div>
-
-
-    </header>
--->
-
-<!-- STELLE
-   <script src="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/particles.js"></script>
-   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
- -->
-
-    <!--FINE NAVBAR-->
-
-
-
-
     <header
       data-android-component="header-default"
       data-android-component-config="{'isSticky': 1}"
@@ -758,9 +643,9 @@
     </header>
 
     <div id="particles-js">
-        <p  id="particles-name" style="position:absolute;">Maurizio Minieri</p>
-        <p id="particles-role" style="position:absolute; color:white;" class="cssanimation danceMiddle">Dottore in Informatica</p>
-        <p  id="particles-university" style="position:absolute; color:white;" class="cssanimation rollFromBottom">Università Federico II di Napoli</p>
+        <p  id="particles-name">Maurizio Minieri</p>
+        <p id="particles-role" class="cssanimation danceMiddle">Dottore in Informatica</p>
+        <p  id="particles-university" class="cssanimation rollFromBottom">Università Federico II di Napoli</p>
     </div>
 
 
