--- a/didattica/index.html
+++ b/didattica/index.html
@@ -990,7 +990,7 @@
 
 
 
-    <div class="container">
+    <!--<div class="container">-->
 
     <div  id="myCarousel1" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -1063,7 +1063,7 @@
 
 
 
-    </div>
+    <!--</div>-->
     <!--FINE CAROUSEL-->
 
 
