--- a/didattica/index.html
+++ b/didattica/index.html
@@ -643,7 +643,7 @@
     </header>
 
     <div id="particles-js">
-        <p  id="particles-name">Maurizio Minieri1</p>
+        <p  id="particles-name">Maurizio Minieri</p>
         <p id="particles-role" class="cssanimation danceMiddle">Dottore in Informatica</p>
         <p  id="particles-university" class="cssanimation rollFromBottom">Università Federico II di Napoli</p>
     </div>
@@ -988,10 +988,6 @@
 
     </table>
 
-
-
-    <!--<div class="container">-->
-
     <div  id="myCarousel1" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -1059,11 +1055,6 @@
 
     </table>
 
-
-
-
-
-    <!--</div>-->
     <!--FINE CAROUSEL-->
 
 
@@ -1087,9 +1078,6 @@
 
     </table>
 
-
-
-    <div class="container">
 
     <div  id="myCarousel2" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -1172,9 +1160,6 @@
     </tr>
 
     </table>
-
-
-    </div>
     <!--FINE CAROUSEL-->
 
 
@@ -1182,6 +1167,7 @@
 
 
     <!--LEFT-->
+<!--
     <div id="Left" class="w3-container city w3-animate-left" style="display:none; text-align:center;">
     <h2>Classe 3</h2>
     <p>Slide in from Left.</p>
@@ -1205,7 +1191,7 @@
     <p>Slide in from bottom</p>
     <p>...</p>
     </div>
-
+-->
 
 
     </div>
@@ -1344,7 +1330,7 @@
 
     </table>
 
-    <div style=" width:80%;" class="container">
+    <!--<div style=" width:80%;" class="container">-->
 
     <div  id="myCarousel3" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -1424,7 +1410,7 @@
     </table>
 
 
-    </div>
+    <!--</div>-->
     <!--FINE CAROUSEL-->
 
     </div>
