--- a/didattica/index.html
+++ b/didattica/index.html
@@ -1752,12 +1752,12 @@
 
         <!--SCUOLE TEST1 CINEMA-->
     <div class="w3-bar-block w3-gray w3-card" style="margin-left: -1%; width:180px; border: 2px solid; box-shadow: 0.1em 0.1em 0.05em gray;">
-    <button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Zoom3')">Classe Zoom</button>
+    <!--<button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Zoom3')">Classe Zoom</button>
     <button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Fade3')">Classe Fade</button>
     <button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Left3')">Classe Left</button>
     <button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Right3')">Classe Right</button>
     <button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Top3')">Classe Top</button>
-    <button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Bottom3')">Classe Bottom</button>
+    <button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Bottom3')">Classe Bottom</button>-->
     </div>
 
 
