--- a/didattica/index.html
+++ b/didattica/index.html
@@ -962,10 +962,10 @@
     <div class="w3-bar-block w3-gray w3-card" style="margin-left: -1%; width:180px; border: 2px solid; box-shadow: 0.1em 0.1em 0.05em gray;">
     <button class="w3-bar-item w3-button tablink" onclick="openLink(1,event, 'Zoom')">Liceo Plinio Seniore</button>
     <button class="w3-bar-item w3-button tablink" onclick="openLink(1,event, 'Fade')">Liceo De Carlo</button>
-    <!--<button class="w3-bar-item w3-button tablink" onclick="openLink(1,event, 'Left')">Classe Left</button>
+    <button class="w3-bar-item w3-button tablink" onclick="openLink(1,event, 'Left')">Classe Left</button>
     <button class="w3-bar-item w3-button tablink" onclick="openLink(1,event, 'Right')">Classe Right</button>
     <button class="w3-bar-item w3-button tablink" onclick="openLink(1,event, 'Top')">Classe Top</button>
-    <button class="w3-bar-item w3-button tablink" onclick="openLink(1,event, 'Bottom')">Classe Bottom</button>-->
+    <button class="w3-bar-item w3-button tablink" onclick="openLink(1,event, 'Bottom')">Classe Bottom</button>
     </div>
 
 
@@ -1254,9 +1254,9 @@
     <button class="w3-bar-item w3-button tablink" onclick="openLink(2,event, 'Bottom2')">I.C. Volino</button>
     <button class="w3-bar-item w3-button tablink" onclick="openLink(2,event, 'Fade2')">I.C. Mastriani</button>
     <button class="w3-bar-item w3-button tablink" onclick="openLink(2,event, 'Left2')">Tito Livio</button>
-    <!--<button class="w3-bar-item w3-button tablink" onclick="openLink(2,event, 'Right2')">Classe Right</button>
+    <button class="w3-bar-item w3-button tablink" onclick="openLink(2,event, 'Right2')">Classe Right</button>
     <button class="w3-bar-item w3-button tablink" onclick="openLink(2,event, 'Top2')">Classe Top</button>
-    <button class="w3-bar-item w3-button tablink" onclick="openLink(2,event, 'Zoom2')">Classe Zoom</button>-->
+    <button class="w3-bar-item w3-button tablink" onclick="openLink(2,event, 'Zoom2')">Classe Zoom</button>
     </div>
 
 
@@ -1752,12 +1752,12 @@
 
         <!--SCUOLE TEST1 CINEMA-->
     <div class="w3-bar-block w3-gray w3-card" style="margin-left: -1%; width:180px; border: 2px solid; box-shadow: 0.1em 0.1em 0.05em gray;">
-    <!--<button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Zoom3')">Classe Zoom</button>
+    <button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Zoom3')">Classe Zoom</button>
     <button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Fade3')">Classe Fade</button>
     <button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Left3')">Classe Left</button>
     <button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Right3')">Classe Right</button>
     <button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Top3')">Classe Top</button>
-    <button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Bottom3')">Classe Bottom</button>-->
+    <button class="w3-bar-item w3-button tablink" onclick="openLink(3,event, 'Bottom3')">Classe Bottom</button>
     </div>
 
 
